Update .gitignore to exclude Terraform files and enhance session management in auth.go with separate cookie handling for agent and portal sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 config.toml
 config.toml.*
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/terraform.tfvars
 libredesk.bin
 libredesk
 libredesk.exe
